2013-10-07 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/massive/massive_delete_alerts.php,
	godmode/massive/massive_add_alerts.php: fixed the get agents in
	the groups with subgroups and enabled "Group recursion".
	
	Fixes: #2393

2013-10-07 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/modificar_agente.php: fixed the align of bottom
	create buttom.
	
	Fixes: #2392

2013-10-07  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_networkmap.php,
	  operation/agentes/networkmap_list.php,
	  operation/agentes/networkmap.php: Fixed ACL related problems.

2013-10-07  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php: Disabled 
	second pass processing in 3d pie chart because
	it was really heavy (13 seconds chargin a simple
	pie is unacceptable)

2013-10-07  Ramon Novoa  <rnovoa@artica.es>

	* extras/pandoradb_migrate_4.1_to_5.0.postgreSQL.sql,
	  extras/pandoradb_migrate_4.1_to_5.0.oracle.sql,
	  extras/pandoradb_migrate_4.1_to_5.0.mysql.sql: Added to repository.
	  4.1 to 5.0 migration scripts.

	* extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql,
	  extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql,
	  extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql: Removed a suspicious
	  insert into tusuario.

2013-10-07  Sergio Martin <sergio.martin@artica.es>

	* include/styles/pandora.css
	include/functions_reporting.php
	include/fonts/FreeSans.ttf
	include/fonts/FreeSansBold.ttf
	include/config_process.php
	operation/reporting/reporting_viewer.php
	images/pandora_logo_white.jpg
	godmode/reporting/reporting_builder.list_items.php
	godmode/reporting/reporting_builder.main.php
	godmode/reporting/reporting_builder.php: Fix several visual
	issues in reports. Update FreeSans font. Add some code for
	pdf reports in enterprise side

2013-10-07  Junichi Satoh  <junichi@rworks.jp>

	* extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql,
	extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql: Removed
	duplicated queries.
