@@ -1,3 +1,13 @@
+2013-10-07  Sergio Martin <sergio.martin@artica.es>
+
+	* include/styles/pandora.css: Added a overflow hidden
+	in left informative tab of pandoras interface to avoid
+	ugly visual errors.
+
+	* godmode/reporting/reporting_builder.list_items.php
+	godmode/reporting/reporting_builder.item_editor.php: Change Avg
+	strings by Rate strings in top N reports for incident #211
+
 2013-10-07 Miguel de Dios <miguel.dedios@artica.es>
 	
 	* godmode/massive/massive_delete_alerts.php,
